# Vedika

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
vedika/: __init__.py  normalizer.py  sandhi_join.py  sandhi_joiner.py  sandhi_split.py  sandhi_splitter.py  sentence_splitter.py  syllabification.py  tokenizer.py
vedika/utils/: download.py
