[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedika"
dynamic = ["version"]
description = "A comprehensive toolkit for Sanskrit text processing"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "regex>=2021.8.3",
]