[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedika"
dynamic = ["version"]
authors = [
  {name = "Tanuj Saxena", email = "tanuj.saxena.rks@gmail.com"},
  {name = "Soumya Sharma", email = "soumyasharma1599@gmail.com"},
]
description = "A comprehensive toolkit for Sanskrit text processing"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "regex>=2021.8.3",
    "huggingface_hub>=0.22.2",
]
readme = "README.rst"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords=["Sanskrit","SanskritNLP","Sanskrit Toolkit","Toolkit"]


