[bdist_wheel]
universal = 1
[metadata]
name = sanskrit-toolkit
version = 0.0.14
author = Tanuj Saxena and Soumya Sharma
author_email = tanuj.saxena.rks@gmail.com and soumyasharma1599@gmail.com
description = A modular Sanskrit NLP toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tanuj437/Vedika
project_urls =
    Bug Tracker = https://github.com/tanuj437/Vedika/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.package_data]
sanskrit_toolkit = ["*.json", "*.txt"]


[options.extras_require]
dev =
    pytest
    build
    twine
